# depthai-nodes

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  rewrite  rf-detr.py  setup.py
.github/: CODEOWNERS  labeler.yaml
.github/workflows/: bom_tests.yaml  ci.yaml  codecov.yaml  e2e_tests.yaml  integration_tests.yaml  python-publish.yaml  stability_tests.yaml  stability_tests_parallel.yaml
MRE/extended_neural_network/: basic.py  from_camera.py  full.py  with_detections_filter.py  with_tiling.py
MRE/stage_2_neural_network/: base.py
custom_messages/: img_detections.py
depthai-nodes/: __init__.py  postprocessing_node_example.py
depthai_nodes/: __init__.py  constants.py  host_parsing_neural_network.py  logging.py  parser_generator.py  parsing_neural_network.py  postprocessing_node_depth_anything.py  postprocessing_node_dncnn3.py  postprocessing_node_example.py  postprocessing_node_scrfd.py  postprocessing_node_selfie_seg.py  postprocessing_node_yunet.py  postprocessing_node_zero_dce.py
depthai_nodes/message/: README.md  __init__.py  classification.py  clusters.py  collection.py  detected_recognitions.py  gathered_data.py  img_detections.py  keypoints.py  lines.py  map.py  prediction.py  segmentation.py  snap_data.py
depthai_nodes/node/: README.md  __init__.py  applay_depth_colormap.py  apply_colormap.py  apply_depth_colormap.py  base_host_node.py  base_threaded_host_node.py  coordinates_mapper.py  depth_color_transform.py  depth_merger.py  detection_cropper.py  detections_mapper.py  detections_recognitions_sync.py  extended_neural_network.py  frame_cropper.py  gather_data.py  host_crop_config_creator.py  host_parsing_neural_network.py  host_spatials_calc.py  img_detections_bridge.py  img_detections_filter.py  img_detections_mapper.py  img_frame_overlay.py  img_frame_sender.py  instance_to_semantic_mask.py  message_collector.py  overlay_frames.py  parser_generator.py  parsing_neural_network.py  snaps_producer.py  snaps_uploader.py  stage_2_neural_network.py  tiles_patcher.py  tiling.py  two_stage_sync.py
depthai_nodes/nodes/: __init__.py  depth_color_transform.py  depth_merger.py  (+1 more)
docs/: developer_guide.md  nn_archive_parameters.md
examples/: README.md  main.py  run_on_rvc2.py
rewrite/: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
rewrite/cmake/: depthai_nodesConfig.cmake.in  depthai_nodesOptions.cmake  vcpkg.cmake
rewrite/include/: ParserGenerator.hpp
rewrite/include/host_extensions/: ParsingNeuralNetwork.hpp
rewrite/include/host_extensions/messages/: Keypoints.hpp
rewrite/include/host_extensions/parsers/: BaseParser.hpp  KeypointParser.hpp  SimCCKeypointParser.hpp
rewrite/src/: ParserGenerator.cpp
rewrite/src/host_extensions/: ParsingNeuralNetwork.cpp
rewrite/src/host_extensions/messages/: Keypoints.cpp
rewrite/src/host_extensions/parsers/: BaseParser.cpp  KeypointParser.cpp  SimCCKeypointParser.cpp
rewrite/src/utility/: ErrorMacros.hpp  spdlog-fmt.hpp
tests/: conftest.py
(+454 files in other folders)
